--- a/pagina_inicial/pagina_inicial.csproj
+++ b/pagina_inicial/pagina_inicial.csproj
@@ -9,7 +9,7 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>pagina_inicial</RootNamespace>
     <AssemblyName>pagina_inicial</AssemblyName>
-    <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     <PublishUrl>publish\</PublishUrl>
@@ -27,6 +27,7 @@
     <IsWebBootstrapper>false</IsWebBootstrapper>
     <UseApplicationTrust>false</UseApplicationTrust>
     <BootstrapperEnabled>true</BootstrapperEnabled>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -62,7 +63,6 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="cnn\ConnectionString.cs" />
-    <Compile Include="Condominio.cs" />
     <Compile Include="frmCadastro_bloco.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -156,6 +156,12 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="cmd\" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\ProjetoPim\ProjetoPim.csproj">
+      <Project>{7dcbd7b2-e8e4-4e40-90d8-b6cb470e3477}</Project>
+      <Name>ProjetoPim</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
