--- a/pagina_inicial/pagina_inicial.csproj
+++ b/pagina_inicial/pagina_inicial.csproj
@@ -57,7 +57,6 @@
     <Reference Include="System.Data" />
     <Reference Include="System.Deployment" />
     <Reference Include="System.Drawing" />
-    <Reference Include="System.Net.Http" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
   </ItemGroup>
@@ -122,15 +121,6 @@
     <None Include="Resources\blue-document-plus-icon.png" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="mssqlsystemresource.mdf">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
-    <Content Include="mssqlsystemresource_log.ldf">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-      <DependentUpon>mssqlsystemresource.mdf</DependentUpon>
-    </Content>
-  </ItemGroup>
-  <ItemGroup>
     <BootstrapperPackage Include=".NETFramework,Version=v4.5.2">
       <Visible>False</Visible>
       <ProductName>Microsoft .NET Framework 4.5.2 %28x86 e x64%29</ProductName>
@@ -146,9 +136,9 @@
     <Folder Include="cmd\" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\ProjetoPim\ProjetoPim.csproj">
-      <Project>{7dcbd7b2-e8e4-4e40-90d8-b6cb470e3477}</Project>
-      <Name>ProjetoPim</Name>
+    <ProjectReference Include="..\DAL\DAL.csproj">
+      <Project>{93693897-7e25-451f-90d2-4f4cf4ebb642}</Project>
+      <Name>DAL</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
