--- a/DAL/DAL.csproj
+++ b/DAL/DAL.csproj
@@ -56,6 +56,9 @@
     <Compile Include="Persistence\UsuarioDAL.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <None Include="Diagram\DiagramPersistence.cd" />
+    <None Include="Diagram\DiagramModel.cd" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
